fix(ControlPanel): prevent panel expantion on overflow in IE11
related to OPT-1124

--- a/client/src/components/Reports/ReportControlPanel.scss
+++ b/client/src/components/Reports/ReportControlPanel.scss
@@ -3,6 +3,8 @@
   border-radius: 8px;
   border: 1px solid #dfdfdf;
   padding: 12px 12px 0 12px;
+  display: table;
+  width: 100%;
 }
 
 .ReportControlPanel__popover {
